--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@
 /TechAgCompany.UI/bin/Debug/net7.0
 /TechAgCompany.UI/obj/Debug/net7.0
 /TechAgCompany.Repository/obj/Debug/net7.0
+/Techaagcompany.web/obj/Release/net7.0
+/TechAgCompany.Entities/obj/Release/net7.0
+/TechAgCompany.Repository/obj/Release/net7.0
+/TechAgCompany.UI/obj/Release/net7.0
