--- a/TechAgCompany.Repository/TechAgCompany.Repository.csproj
+++ b/TechAgCompany.Repository/TechAgCompany.Repository.csproj
@@ -6,10 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.20" />
 	</ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TechAgCompany.Entities\TechAgCompany.Entities.csproj" />
   </ItemGroup>
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App"/>
+	</ItemGroup>
 
 </Project>
