--- a/Concertbooking.repositry/Concertbooking.repositry.csproj
+++ b/Concertbooking.repositry/Concertbooking.repositry.csproj
@@ -7,12 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ConcertBooking.Infrastructure\ConcertBooking.Infrastructure.csproj" />
     <ProjectReference Include="..\TechAsgCompany.Conertbooking.Entities\Conertbooking.Entities.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.19" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.19" />
   </ItemGroup>
 	<ItemGroup>
