--- a/Techkidda.BookShop.API/appsettings.json
+++ b/Techkidda.BookShop.API/appsettings.json
@@ -9,7 +9,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
   "jwt": {
     "key": "shssfgsdgsjhgshggsdghgsahgshggshgdggsadgshg"
   }
